# EDA

./: CMakeLists.txt  CMakeProject1.cpp
OcTree/: CmakeList.txt  OcTree.cpp  OcTree.h  OcTree.vcxproj  OcTree.vcxproj.filters  Octree.h  main.cpp  mainwindow.cpp  mainwindow.h  newOctree.pro  punto.h
OcTree/Debug/: vc142.idb
OcTree/Debug/OcTree.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OcTree.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VectoresMultidimensionales/: CMakeLists.txt  VectoresMultidimensionales.cpp  VectoresMultidimensionales.h
